--- a/package.json
+++ b/package.json
@@ -11,9 +11,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "fs": "0.0.1-security",
+    "http": "0.0.0",
     "koa": "^2.7.0",
     "koa-bodyparser": "^2.5.0",
     "koa-router": "^7.4.0",
-    "mysql": "^2.17.1"
+    "koa-websocket": "^5.0.1",
+    "mysql": "^2.17.1",
+    "socket.io": "^2.2.0",
+    "ws": "1.1.1"
   }
 }
